--- a/MyVagon/Storyboard/Home.storyboard
+++ b/MyVagon/Storyboard/Home.storyboard
@@ -7218,16 +7218,16 @@
     </scenes>
     <designables>
         <designable name="1F0-CZ-tTn">
-            <size key="intrinsicContentSize" width="374" height="39.220703125"/>
+            <size key="intrinsicContentSize" width="117.5" height="18.5"/>
         </designable>
         <designable name="1ik-zr-pIX">
-            <size key="intrinsicContentSize" width="374" height="39.220703125"/>
+            <size key="intrinsicContentSize" width="105.5" height="18.5"/>
         </designable>
         <designable name="41b-G4-9LY">
-            <size key="intrinsicContentSize" width="374" height="39.220703125"/>
+            <size key="intrinsicContentSize" width="118" height="18.5"/>
         </designable>
         <designable name="4Yk-CD-PZ6">
-            <size key="intrinsicContentSize" width="374" height="39.220703125"/>
+            <size key="intrinsicContentSize" width="134.5" height="18.5"/>
         </designable>
         <designable name="BXF-jj-EO4">
             <size key="intrinsicContentSize" width="120" height="20"/>
@@ -7236,40 +7236,40 @@
             <size key="intrinsicContentSize" width="120" height="20"/>
         </designable>
         <designable name="EM0-cS-mSz">
-            <size key="intrinsicContentSize" width="374" height="39.220703125"/>
+            <size key="intrinsicContentSize" width="66" height="18.5"/>
         </designable>
         <designable name="Exb-wM-eW9">
             <size key="intrinsicContentSize" width="120" height="20"/>
         </designable>
         <designable name="P4e-b1-Po8">
-            <size key="intrinsicContentSize" width="374" height="39.220703125"/>
+            <size key="intrinsicContentSize" width="135" height="18.5"/>
         </designable>
         <designable name="XV4-UW-Qe0">
             <size key="intrinsicContentSize" width="-1" height="30"/>
         </designable>
         <designable name="f4a-G4-rAK">
-            <size key="intrinsicContentSize" width="374" height="39.220703125"/>
+            <size key="intrinsicContentSize" width="96.5" height="18.5"/>
         </designable>
         <designable name="hye-uA-8rd">
-            <size key="intrinsicContentSize" width="374" height="39.220703125"/>
+            <size key="intrinsicContentSize" width="114" height="18.5"/>
         </designable>
         <designable name="jX1-JX-WA3">
             <size key="intrinsicContentSize" width="205.69999999999999" height="37.140000000000001"/>
         </designable>
         <designable name="m28-MZ-YP9">
-            <size key="intrinsicContentSize" width="374" height="39.220703125"/>
+            <size key="intrinsicContentSize" width="114" height="18.5"/>
         </designable>
         <designable name="ovs-fh-rYv">
-            <size key="intrinsicContentSize" width="374" height="39.220703125"/>
+            <size key="intrinsicContentSize" width="127.5" height="18.5"/>
         </designable>
         <designable name="pxc-Co-qbc">
             <size key="intrinsicContentSize" width="120" height="20"/>
         </designable>
         <designable name="qQM-aq-rxT">
-            <size key="intrinsicContentSize" width="374" height="39.220703125"/>
+            <size key="intrinsicContentSize" width="122" height="18.5"/>
         </designable>
         <designable name="up4-Kv-YNl">
-            <size key="intrinsicContentSize" width="374" height="39.220703125"/>
+            <size key="intrinsicContentSize" width="78.5" height="18.5"/>
         </designable>
     </designables>
     <resources>
