--- a/MyVagon/ViewController/Earning/Cell/MyEarningCell.xib
+++ b/MyVagon/ViewController/Earning/Cell/MyEarningCell.xib
@@ -11,18 +11,21 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="241" id="KGk-i7-Jjw" customClass="MyEarningCell" customModule="MyVagon" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="445" height="241"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="273" id="KGk-i7-Jjw" customClass="MyEarningCell" customModule="MyVagon" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="494" height="273"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="445" height="241"/>
+                <rect key="frame" x="0.0" y="0.0" width="494" height="273"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Pz-IZ-STO">
-                        <rect key="frame" x="10" y="5" width="425" height="231"/>
+                        <rect key="frame" x="10" y="5" width="474" height="263"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" ambiguous="YES" text="Truck with trailer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fXA-wL-38j" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
-                                <rect key="frame" x="10" y="10" width="354" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Truck with trailer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fXA-wL-38j" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
+                                <rect key="frame" x="10" y="10" width="403" height="23"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="23" id="b4Q-tD-R7a"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -36,7 +39,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$500" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q2E-sp-hI3" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
-                                <rect key="frame" x="374" y="10" width="41" height="20.5"/>
+                                <rect key="frame" x="423" y="10" width="41" height="22.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -50,8 +53,8 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="#567898" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7jk-Vh-qDU" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
-                                <rect key="frame" x="10" y="36" width="71" height="20.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="#567898" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7jk-Vh-qDU" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
+                                <rect key="frame" x="10" y="33" width="71" height="23"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -64,8 +67,8 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" ambiguous="YES" text="5 Ton . 500 miles" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h8n-xO-fvq" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
-                                <rect key="frame" x="86" y="36" width="329" height="20.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="5 Ton . 500 miles" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h8n-xO-fvq" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
+                                <rect key="frame" x="86" y="33" width="378" height="23"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -78,8 +81,8 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="1.2 mile Deadhead : Truck With Trailer" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p0u-ix-3Lg" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
-                                <rect key="frame" x="10" y="61.5" width="405" height="20.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.2 mile Deadhead : Truck With Trailer" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p0u-ix-3Lg" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
+                                <rect key="frame" x="10" y="56" width="454" height="23"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -93,7 +96,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="P8U-DR-Er9">
-                                <rect key="frame" x="10" y="101" width="405" height="120"/>
+                                <rect key="frame" x="10" y="94" width="454" height="120"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="120" id="WkU-Dv-8ju"/>
@@ -104,17 +107,21 @@
                         <constraints>
                             <constraint firstItem="p0u-ix-3Lg" firstAttribute="trailing" secondItem="h8n-xO-fvq" secondAttribute="trailing" id="0rP-JH-vN3"/>
                             <constraint firstItem="h8n-xO-fvq" firstAttribute="leading" secondItem="7jk-Vh-qDU" secondAttribute="trailing" constant="5" id="0ta-Fg-CMc"/>
+                            <constraint firstItem="7jk-Vh-qDU" firstAttribute="height" secondItem="h8n-xO-fvq" secondAttribute="height" id="7Cd-dR-aci"/>
                             <constraint firstItem="p0u-ix-3Lg" firstAttribute="leading" secondItem="7jk-Vh-qDU" secondAttribute="leading" id="B4s-gL-WOt"/>
                             <constraint firstItem="7jk-Vh-qDU" firstAttribute="centerY" secondItem="h8n-xO-fvq" secondAttribute="centerY" id="CFi-9k-RsS"/>
-                            <constraint firstItem="7jk-Vh-qDU" firstAttribute="top" secondItem="fXA-wL-38j" secondAttribute="bottom" constant="5" id="Edt-tl-pgc"/>
+                            <constraint firstItem="7jk-Vh-qDU" firstAttribute="top" secondItem="fXA-wL-38j" secondAttribute="bottom" id="Edt-tl-pgc"/>
                             <constraint firstItem="fXA-wL-38j" firstAttribute="top" secondItem="6Pz-IZ-STO" secondAttribute="top" constant="10" id="If2-sL-UKr"/>
+                            <constraint firstItem="fXA-wL-38j" firstAttribute="height" secondItem="7jk-Vh-qDU" secondAttribute="height" id="JKN-Vw-wts"/>
                             <constraint firstItem="P8U-DR-Er9" firstAttribute="trailing" secondItem="p0u-ix-3Lg" secondAttribute="trailing" id="L85-Lp-fWa"/>
-                            <constraint firstItem="p0u-ix-3Lg" firstAttribute="top" secondItem="7jk-Vh-qDU" secondAttribute="bottom" constant="5" id="LL8-R1-cjQ"/>
+                            <constraint firstItem="p0u-ix-3Lg" firstAttribute="top" secondItem="7jk-Vh-qDU" secondAttribute="bottom" id="LL8-R1-cjQ"/>
                             <constraint firstItem="h8n-xO-fvq" firstAttribute="trailing" secondItem="Q2E-sp-hI3" secondAttribute="trailing" id="SmM-aW-CLO"/>
-                            <constraint firstAttribute="bottom" secondItem="P8U-DR-Er9" secondAttribute="bottom" constant="10" id="XBx-J7-wZg"/>
-                            <constraint firstItem="P8U-DR-Er9" firstAttribute="top" secondItem="p0u-ix-3Lg" secondAttribute="bottom" constant="5" id="Y1v-O7-3tl"/>
+                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="P8U-DR-Er9" secondAttribute="bottom" constant="10" id="XBx-J7-wZg"/>
+                            <constraint firstItem="P8U-DR-Er9" firstAttribute="top" secondItem="p0u-ix-3Lg" secondAttribute="bottom" constant="15" id="Y1v-O7-3tl"/>
+                            <constraint firstItem="7jk-Vh-qDU" firstAttribute="height" secondItem="p0u-ix-3Lg" secondAttribute="height" id="YFd-1A-yqe"/>
                             <constraint firstAttribute="trailing" secondItem="Q2E-sp-hI3" secondAttribute="trailing" constant="10" id="Yi4-n0-XEv"/>
                             <constraint firstItem="P8U-DR-Er9" firstAttribute="leading" secondItem="p0u-ix-3Lg" secondAttribute="leading" id="gj6-NB-ZBv"/>
+                            <constraint firstItem="fXA-wL-38j" firstAttribute="height" secondItem="Q2E-sp-hI3" secondAttribute="height" multiplier="1.02439" id="lb8-vl-L5X"/>
                             <constraint firstItem="Q2E-sp-hI3" firstAttribute="leading" secondItem="fXA-wL-38j" secondAttribute="trailing" constant="10" id="loD-Pz-adv"/>
                             <constraint firstItem="7jk-Vh-qDU" firstAttribute="leading" secondItem="fXA-wL-38j" secondAttribute="leading" id="om1-Si-P34"/>
                             <constraint firstItem="fXA-wL-38j" firstAttribute="leading" secondItem="6Pz-IZ-STO" secondAttribute="leading" constant="10" id="pbe-e8-p97"/>
@@ -140,7 +147,7 @@
                 <outlet property="tblEarningLocationHeight" destination="WkU-Dv-8ju" id="lSZ-OZ-3UA"/>
                 <outlet property="viewContents" destination="6Pz-IZ-STO" id="PF9-3V-a2k"/>
             </connections>
-            <point key="canvasLocation" x="222.46376811594206" y="196.54017857142856"/>
+            <point key="canvasLocation" x="257.97101449275362" y="207.25446428571428"/>
         </tableViewCell>
     </objects>
     <resources>
